--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 
 /* === === estilos globais === ===*/
 
+:root {
+    --clr-text-light: #948686;
+
+    --background-clr: #000;
+
+    --font-size-primary: 4rem;
+    --font-size-secundary: 2rem;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -9,3 +18,37 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background: var(--background-clr);
+}
+
+.container {
+    display: inline-flex;
+}
+
+.container .estatico {
+    color: var(--clr-text-light);
+    font-size: var(--font-size-primary);
+    font-weight: 400;
+}
+
+.container .dinamico {
+    margin-left: .3rem;
+}
+
+.dinamico li{
+    color: orangered;
+    list-style: none;
+    font-size: var(--font-size-primary);
+    font-weight: 500;
+}
+
+.dinamico li span::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-left: 2px solid #948686;
+    animation: typing 1.5s steps(10) infinite;
+}
